tools/tests/errors/surf_parse_01.ki
# PARSER: a Function header missing the ':' before its body
var f = Function(x)
    return x